--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -191,7 +191,7 @@ a, input {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-bottom: 0.75rem;
+  margin: -0.25rem 0 0.75rem 0;
 }
 
 .next-appointment .form-container form {
@@ -199,7 +199,7 @@ a, input {
 }
 
 .next-appointment .btn {
-  margin: 0 0.25rem;
+  margin: 0.25rem;
 }
 
 .empty {
