--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -240,15 +240,6 @@ a, input {
   margin-top: 2rem;
 }
 
-#datePicker {
-  display: block;
-  position: unset;
-}
-
-#datePicker .close {
-  display: none;
-}
-
 #appointments_wrapper,
 #profiles_wrapper {
   overflow-x: scroll;
@@ -387,6 +378,116 @@ a, input {
 #clearFields {
   cursor: pointer;
   width: 100%;
+}
+
+#datePicker {
+  display: block;
+  position: unset;
+  margin: 0 auto;
+}
+
+#datePicker .close {
+  display: none;
+}
+
+#calendar {
+  font-family: 'Varela Round', Helvetica, Arial, sans-serif;
+  width: 100%;
+  background-color: #efefef;
+  border: 1px solid #b5b5b7;
+  border-radius: 0.5rem;
+}
+
+#calendarControls {
+  display: grid;
+  grid-template-columns: 2.5rem calc(100% - 5rem) 2.5rem;
+  height: 2.5rem;
+  background-color: #414141;
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+#calendarControls .button {
+  padding: 0.5rem;
+  color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+#calendarControls .button.inactive {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+#calendarControls .date {
+  padding: 0.5rem;
+  color: white;
+  font-size: 1.5rem;
+}
+
+#calendarControls .date i {
+  margin-left: 0.5rem;
+  cursor: pointer;
+}
+
+#calendarContent .img-container {
+  display: grid;
+  height: 100%;
+}
+
+#calendarContent .img-container img {
+  margin: auto;
+}
+
+#calendarContent {
+  position: relative;
+  border-bottom-right-radius: 0.5rem;
+  border-bottom-left-radius: 0.5rem;
+  overflow-y: scroll;
+  height: calc(32rem - 1px);
+}
+
+#calendarContent::-webkit-scrollbar {
+  width: 1rem;
+}
+
+#calendarContent::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 0.375rem rgba(0,0,0,0.3);
+  box-shadow: inset 0 0 0.375rem rgba(0,0,0,0.3);
+}
+
+#calendarContent::-webkit-scrollbar-thumb {
+  background-color: #b817a2;
+  border-radius: 0.5rem;
+}
+
+#calendarContent ol, #calendarContent ul {
+  font-family: 'Varela Round', Arial, sans-serif;
+}
+
+#calendarContent ol {
+  height: 1536px;
+}
+
+#calendarContent ol li {
+  height: 4rem;
+  padding: 0.5rem;
+  border-bottom: 1px solid #c7c7c7;
+}
+
+#calendarContent ul li {
+  position: absolute;
+  height: 3.33rem;
+  width: calc(100% - 6rem);
+  padding: 0.5rem;
+  color: white;
+  background-color: #007bff;
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 
 @media (min-width: 576px) {
