--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -41,6 +41,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
   <script type="text/javascript" src="{% static 'users/js/script.js' %}"></script>
   <script type="text/javascript" src="{% static 'users/js/date_picker.js' %}"></script>
+  <script type="text/javascript" src="{% static 'users/js/calendar.js' %}"></script>
   <script type="text/javascript" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
 </head>
 <body>
