--- a/booking/templates/booking/index.html
+++ b/booking/templates/booking/index.html
@@ -2,6 +2,16 @@
 
 {% block content %}
 {% include 'booking/modal.html' %}
+<div id="datePicker"></div>
+<div id="datePickerDate">
+  <input type="hidden" name="year" value="{{ date|date:'Y' }}" autocomplete="off">
+  <input type="hidden" name="month" value="{{ date|date:'n' }}" autocomplete="off">
+</div>
+<div id="date">
+  <input type="hidden" name="year" value="{{ date|date:'Y' }}" autocomplete="off">
+  <input type="hidden" name="month" value="{{ date|date:'n' }}" autocomplete="off">
+  <input type="hidden" name="day" value="{{ date|date:'j' }}" autocomplete="off">
+</div>
 <h3 class="h3 title text-center">Schedule an Appointment</h3>
 <div id="calendar">
   <div id="calendarControls">
