--- a/home/templates/home/footer.html
+++ b/home/templates/home/footer.html
@@ -13,7 +13,7 @@
           <i class="fas fa-external-link-alt" title="External Link"></i>
         </li>
         <li>
-          <a href="http://mccarthywebdesign.com/">McCarthy Web Design</a>
+          <a href="https://mccarthy-web-design.000webhostapp.com/">McCarthy Web Design</a>
           <i class="fas fa-external-link-alt" title="External Link"></i>
         </li>
       </ul>
