--- a/booking/templates/booking/base.html
+++ b/booking/templates/booking/base.html
@@ -38,6 +38,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/navbar.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'booking/css/date_picker.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'booking/css/style.css' %}">
+  <script type="text/javascript" src="{% static 'home/js/global.js' %}"></script>
   <script type="text/javascript" src="{% static 'booking/js/script.js' %}"></script>
   <script type="text/javascript" src="{% static 'booking/js/date_picker.js' %}"></script>
 </head>
