--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/footer.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/gdpr.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'home/css/style.css' %}">
+  <script type="text/javascript" src="{% static 'home/js/global.js' %}"></script>
   <script type="text/javascript" src="{% static 'home/js/cookies.js' %}"></script>
   <script type="text/javascript" src="{% static 'home/js/gdpr.js' %}"></script>
   <script type="text/javascript" src="{% static 'home/js/script.js' %}"></script>
