--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" type="text/css" href="{% static 'booking/css/date_picker.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'users/css/style.css' %}">
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.min.css">
+  <script type="text/javascript" src="{% static 'home/js/global.js' %}"></script>
   <script type="text/javascript" src="{% static 'users/js/script.js' %}"></script>
   <script type="text/javascript" src="{% static 'users/js/date_picker.js' %}"></script>
   <script type="text/javascript" src="{% static 'users/js/calendar.js' %}"></script>
